name:           eta-aoc
version:        0.1.0.0
synopsis:       An implementation of the Advent of Code - 2017
description:    Please see the README on Github at <https://github.com/rolandtritsch/eta-aoc-2017#README.md>
category:       Web
homepage:       https://github.com/rolandtritsch/eta-aoc-2017#readme
bug-reports:    https://github.com/rolandtritsch/eta-aoc-2017/issues
author:         Roland Tritsch
maintainer:     roland@tritsch.org
copyright:      2018 Roland Tritsch
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/rolandtritsch/eta-aoc-2017

library
  exposed-modules:
    Day01
    Day01.Part1
    Day01.Part2
    Day02
    Day02.Part1
    Day02.Part2
    Day03
    Day03.Part1
    Day03.Part2
    Day04
    Day04.Part1
    Day04.Part2
    Day05
    Day05.Part1
    Day05.Part2
    Day06
    Day06.Part1
    Day06.Part2
    Day07
    Day07.Part1
    Day07.Part2
    Day08
    Day08.Part1
    Day08.Part2
    Day09
    Day09.Part1
    Day09.Part2
    Day10
    Day10.Part1
    Day10.Part2
    Day11
    Day11.Part1
    Day11.Part2
    Day12
    Day12.Part1
    Day12.Part2
    Day13
    Day13.Part1
    Day13.Part2
    Day14
    Day14.Part1
    Day14.Part2
    Day15
    Day15.Part1
    Day15.Part2
    Day16
    Day16.Part1
    Day16.Part2
    Day17
    Day17.Part1
    Day17.Part2
    Day18
    Day18.Part1
    Day18.Part2
    Util
  hs-source-dirs:
    src
  build-depends:
    base >=4.8 && <4.12
    , split
    , containers
    , Unique
    , text
    , hexstring
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-exe
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
  default-language:
    Haskell2010

executable eta-aoc-day01p1
  main-is:
    src/Day01/Part1.hs
  ghc-options:
    -main-is Day01.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  other-modules:
    Day01Spec
    Day02Spec
    Day03Spec
    Day04Spec
    Day05Spec
    Day06Spec
    Day07Spec
    Day08Spec
    Day09Spec
    Day10Spec
    Day11Spec
    Day12Spec
    Day13Spec
    Day14Spec
    Day15Spec
    Day16Spec
    Day17Spec
    Day18Spec
  hs-source-dirs:
    test
  ghc-options:
    -main-is Spec.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day01
  type:
    exitcode-stdio-1.0
  main-is:
    Day01Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day01Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010
