name:           eta-aoc
version:        0.1.0.0
synopsis:       An implementation of the Advent of Code - 2017
description:    Please see the README on Github at <https://github.com/rolandtritsch/eta-aoc-2017#README.md>
category:       Web
homepage:       https://github.com/rolandtritsch/eta-aoc-2017#readme
bug-reports:    https://github.com/rolandtritsch/eta-aoc-2017/issues
author:         Roland Tritsch
maintainer:     roland@tritsch.org
copyright:      2018 Roland Tritsch
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/rolandtritsch/eta-aoc-2017

library
  exposed-modules:
    Day01
    Day01.Part1
    Day01.Part2
    Day02
    Day02.Part1
    Day02.Part2
    Day03
    Day03.Part1
    Day03.Part2
    Day04
    Day04.Part1
    Day04.Part2
    Day05
    Day05.Part1
    Day05.Part2
    Day06
    Day06.Part1
    Day06.Part2
    Day07
    Day07.Part1
    Day07.Part2
    Day08
    Day08.Part1
    Day08.Part2
    Day09
    Day09.Part1
    Day09.Part2
    Day10
    Day10.Part1
    Day10.Part2
    Day11
    Day11.Part1
    Day11.Part2
    Day12
    Day12.Part1
    Day12.Part2
    Day13
    Day13.Part1
    Day13.Part2
    Day14
    Day14.Part1
    Day14.Part2
    Day15
    Day15.Part1
    Day15.Part2
    Day16
    Day16.Part1
    Day16.Part2
    Day17
    Day17.Part1
    Day17.Part2
    Day18
    Day18.Part1
    Day18.Part2
    Day19
    Day19.Part1
    Day19.Part2
    Day20
    Day20.Part1
    Day20.Part2
    Day21
    Day21.Part1
    Day21.Part2
    Day22
    Day22.Part1
    Day22.Part2
    Day23
    Day23.Part1
    Day23.Part2
    Util
  hs-source-dirs:
    src
  build-depends:
    base >=4.8 && <4.12
    , split
    , containers
    , Unique
    , text
    , hexstring
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-exe
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , Unique
  default-language:
    Haskell2010

executable eta-aoc-day01p1
  main-is:
    src/Day01/Part1.hs
  ghc-options:
    -main-is Day01.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day01p2
  main-is:
    src/Day01/Part2.hs
  ghc-options:
    -main-is Day01.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day02p1
  main-is:
    src/Day02/Part1.hs
  ghc-options:
    -main-is Day02.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day02p2
  main-is:
    src/Day02/Part2.hs
  ghc-options:
    -main-is Day02.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day03p1
  main-is:
    src/Day03/Part1.hs
  ghc-options:
    -main-is Day03.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day03p2
  main-is:
    src/Day03/Part2.hs
  ghc-options:
    -main-is Day03.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day04p1
  main-is:
    src/Day04/Part1.hs
  ghc-options:
    -main-is Day04.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day04p2
  main-is:
    src/Day04/Part2.hs
  ghc-options:
    -main-is Day04.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day05p1
  main-is:
    src/Day05/Part1.hs
  ghc-options:
    -main-is Day05.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day05p2
  main-is:
    src/Day05/Part2.hs
  ghc-options:
    -main-is Day05.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day06p1
  main-is:
    src/Day06/Part1.hs
  ghc-options:
    -main-is Day06.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day06p2
  main-is:
    src/Day06/Part2.hs
  ghc-options:
    -main-is Day06.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day07p1
  main-is:
    src/Day07/Part1.hs
  ghc-options:
    -main-is Day07.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day07p2
  main-is:
    src/Day07/Part2.hs
  ghc-options:
    -main-is Day07.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day08p1
  main-is:
    src/Day08/Part1.hs
  ghc-options:
    -main-is Day08.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day08p2
  main-is:
    src/Day08/Part2.hs
  ghc-options:
    -main-is Day08.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day09p1
  main-is:
    src/Day09/Part1.hs
  ghc-options:
    -main-is Day09.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day09p2
  main-is:
    src/Day09/Part2.hs
  ghc-options:
    -main-is Day09.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day10p1
  main-is:
    src/Day10/Part1.hs
  ghc-options:
    -main-is Day10.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day10p2
  main-is:
    src/Day10/Part2.hs
  ghc-options:
    -main-is Day10.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day11p1
  main-is:
    src/Day11/Part1.hs
  ghc-options:
    -main-is Day11.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day11p2
  main-is:
    src/Day11/Part2.hs
  ghc-options:
    -main-is Day11.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day12p1
  main-is:
    src/Day12/Part1.hs
  ghc-options:
    -main-is Day12.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day12p2
  main-is:
    src/Day12/Part2.hs
  ghc-options:
    -main-is Day12.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day13p1
  main-is:
    src/Day13/Part1.hs
  ghc-options:
    -main-is Day13.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day13p2
  main-is:
    src/Day13/Part2.hs
  ghc-options:
    -main-is Day13.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day14p1
  main-is:
    src/Day14/Part1.hs
  ghc-options:
    -main-is Day14.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day14p2
  main-is:
    src/Day14/Part2.hs
  ghc-options:
    -main-is Day14.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day15p1
  main-is:
    src/Day15/Part1.hs
  ghc-options:
    -main-is Day15.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day15p2
  main-is:
    src/Day15/Part2.hs
  ghc-options:
    -main-is Day15.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day16p1
  main-is:
    src/Day16/Part1.hs
  ghc-options:
    -main-is Day16.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day16p2
  main-is:
    src/Day16/Part2.hs
  ghc-options:
    -main-is Day16.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day17p1
  main-is:
    src/Day17/Part1.hs
  ghc-options:
    -main-is Day17.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day17p2
  main-is:
    src/Day17/Part2.hs
  ghc-options:
    -main-is Day17.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day18p1
  main-is:
    src/Day18/Part1.hs
  ghc-options:
    -main-is Day18.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day18p2
  main-is:
    src/Day18/Part2.hs
  ghc-options:
    -main-is Day18.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day19p1
  main-is:
    src/Day19/Part1.hs
  ghc-options:
    -main-is Day19.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day19p2
  main-is:
    src/Day19/Part2.hs
  ghc-options:
    -main-is Day19.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day20p1
  main-is:
    src/Day20/Part1.hs
  ghc-options:
    -main-is Day20.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day20p2
  main-is:
    src/Day20/Part2.hs
  ghc-options:
    -main-is Day20.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
    , Unique
  default-language:
    Haskell2010

executable eta-aoc-day21p1
  main-is:
    src/Day21/Part1.hs
  ghc-options:
    -main-is Day21.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day21p2
  main-is:
    src/Day21/Part2.hs
  ghc-options:
    -main-is Day21.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day22p1
  main-is:
    src/Day22/Part1.hs
  ghc-options:
    -main-is Day22.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day22p2
  main-is:
    src/Day22/Part2.hs
  ghc-options:
    -main-is Day22.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day23p1
  main-is:
    src/Day23/Part1.hs
  ghc-options:
    -main-is Day23.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day23p2
  main-is:
    src/Day23/Part2.hs
  ghc-options:
    -main-is Day23.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  other-modules:
    Day01Spec
    Day02Spec
    Day03Spec
    Day04Spec
    Day05Spec
    Day06Spec
    Day07Spec
    Day08Spec
    Day09Spec
    Day10Spec
    Day11Spec
    Day12Spec
    Day13Spec
    Day14Spec
    Day15Spec
    Day16Spec
    Day17Spec
    Day18Spec
    Day19Spec
    Day20Spec
    Day21Spec
    Day22Spec
    Day23Spec
  hs-source-dirs:
    test
  ghc-options:
    -main-is Spec.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day01
  type:
    exitcode-stdio-1.0
  main-is:
    Day01Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day01Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day02
  type:
    exitcode-stdio-1.0
  main-is:
    Day02Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day02Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day03
  type:
    exitcode-stdio-1.0
  main-is:
    Day03Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day03Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day04
  type:
    exitcode-stdio-1.0
  main-is:
    Day04Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day04Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day05
  type:
    exitcode-stdio-1.0
  main-is:
    Day05Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day05Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day06
  type:
    exitcode-stdio-1.0
  main-is:
    Day06Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day06Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day07
  type:
    exitcode-stdio-1.0
  main-is:
    Day07Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day07Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day08
  type:
    exitcode-stdio-1.0
  main-is:
    Day08Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day08Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day09
  type:
    exitcode-stdio-1.0
  main-is:
    Day09Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day09Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day10
  type:
    exitcode-stdio-1.0
  main-is:
    Day10Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day10Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day11
  type:
    exitcode-stdio-1.0
  main-is:
    Day11Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day11Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day12
  type:
    exitcode-stdio-1.0
  main-is:
    Day12Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day12Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day13
  type:
    exitcode-stdio-1.0
  main-is:
    Day13Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day13Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day14
  type:
    exitcode-stdio-1.0
  main-is:
    Day14Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day14Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day15
  type:
    exitcode-stdio-1.0
  main-is:
    Day15Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day15Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day16
  type:
    exitcode-stdio-1.0
  main-is:
    Day16Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day16Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day17
  type:
    exitcode-stdio-1.0
  main-is:
    Day17Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day17Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day18
  type:
    exitcode-stdio-1.0
  main-is:
    Day18Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day18Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day19
  type:
    exitcode-stdio-1.0
  main-is:
    Day19Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day19Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day20
  type:
    exitcode-stdio-1.0
  main-is:
    Day20Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day20Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day21
  type:
    exitcode-stdio-1.0
  main-is:
    Day21Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day21Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day22
  type:
    exitcode-stdio-1.0
  main-is:
    Day22Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day22Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day23
  type:
    exitcode-stdio-1.0
  main-is:
    Day23Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day23Spec.run
  build-depends:
    base >=4.8 && <4.12
    , containers
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010
