name:           eta-aoc
version:        0.1.0.0
synopsis:       An implementation of the Advent of Code - 2017
description:    Please see the README on Github at <https://github.com/rolandtritsch/eta-aoc-2017#README.md>
category:       Web
homepage:       https://github.com/rolandtritsch/eta-aoc-2017#readme
bug-reports:    https://github.com/rolandtritsch/eta-aoc-2017/issues
author:         Roland Tritsch
maintainer:     roland@tritsch.org
copyright:      2018 Roland Tritsch
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/rolandtritsch/eta-aoc-2017

library
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Util
  hs-source-dirs:
    src
  build-depends:
    base >=4.8 && <4.12
    , Unique
    , containers
    , hexstring
    , split
    , text
  default-language:
    Haskell2010

executable eta-aoc-exe
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , Unique
    , containers
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day01p1
  main-is:
    app/Day01/Part1.hs
  ghc-options:
    -main-is Day01.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day01p2
  main-is:
    app/Day01/Part2.hs
  ghc-options:
    -main-is Day01.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day02p1
  main-is:
    app/Day02/Part1.hs
  ghc-options:
    -main-is Day02.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day02p2
  main-is:
    app/Day02/Part2.hs
  ghc-options:
    -main-is Day02.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day03p1
  main-is:
    app/Day03/Part1.hs
  ghc-options:
    -main-is Day03.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day03p2
  main-is:
    app/Day03/Part2.hs
  ghc-options:
    -main-is Day03.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , containers
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day04p1
  main-is:
    app/Day04/Part1.hs
  ghc-options:
    -main-is Day04.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day04p2
  main-is:
    app/Day04/Part2.hs
  ghc-options:
    -main-is Day04.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day05p1
  main-is:
    app/Day05/Part1.hs
  ghc-options:
    -main-is Day05.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day05p2
  main-is:
    app/Day05/Part2.hs
  ghc-options:
    -main-is Day05.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day06p1
  main-is:
    app/Day06/Part1.hs
  ghc-options:
    -main-is Day06.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day06p2
  main-is:
    app/Day06/Part2.hs
  ghc-options:
    -main-is Day06.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day07p1
  main-is:
    app/Day07/Part1.hs
  ghc-options:
    -main-is Day07.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day07p2
  main-is:
    app/Day07/Part2.hs
  ghc-options:
    -main-is Day07.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day08p1
  main-is:
    app/Day08/Part1.hs
  ghc-options:
    -main-is Day08.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , containers
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day08p2
  main-is:
    app/Day08/Part2.hs
  ghc-options:
    -main-is Day08.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , containers
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day09p1
  main-is:
    app/Day09/Part1.hs
  ghc-options:
    -main-is Day09.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day09p2
  main-is:
    app/Day09/Part2.hs
  ghc-options:
    -main-is Day09.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day10p1
  main-is:
    app/Day10/Part1.hs
  ghc-options:
    -main-is Day10.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day10p2
  main-is:
    app/Day10/Part2.hs
  ghc-options:
    -main-is Day10.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day11p1
  main-is:
    app/Day11/Part1.hs
  ghc-options:
    -main-is Day11.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day11p2
  main-is:
    app/Day11/Part2.hs
  ghc-options:
    -main-is Day11.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day12p1
  main-is:
    app/Day12/Part1.hs
  ghc-options:
    -main-is Day12.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day12p2
  main-is:
    app/Day12/Part2.hs
  ghc-options:
    -main-is Day12.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day13p1
  main-is:
    app/Day13/Part1.hs
  ghc-options:
    -main-is Day13.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day13p2
  main-is:
    app/Day13/Part2.hs
  ghc-options:
    -main-is Day13.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day14p1
  main-is:
    app/Day14/Part1.hs
  ghc-options:
    -main-is Day14.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day14p2
  main-is:
    app/Day14/Part2.hs
  ghc-options:
    -main-is Day14.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , containers
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day15p1
  main-is:
    app/Day15/Part1.hs
  ghc-options:
    -main-is Day15.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day15p2
  main-is:
    app/Day15/Part2.hs
  ghc-options:
    -main-is Day15.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day16p1
  main-is:
    app/Day16/Part1.hs
  ghc-options:
    -main-is Day16.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day16p2
  main-is:
    app/Day16/Part2.hs
  ghc-options:
    -main-is Day16.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day17p1
  main-is:
    app/Day17/Part1.hs
  ghc-options:
    -main-is Day17.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day17p2
  main-is:
    app/Day17/Part2.hs
  ghc-options:
    -main-is Day17.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day18p1
  main-is:
    app/Day18/Part1.hs
  ghc-options:
    -main-is Day18.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day18p2
  main-is:
    app/Day18/Part2.hs
  ghc-options:
    -main-is Day18.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day19p1
  main-is:
    app/Day19/Part1.hs
  ghc-options:
    -main-is Day19.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day19p2
  main-is:
    app/Day19/Part2.hs
  ghc-options:
    -main-is Day19.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day20p1
  main-is:
    app/Day20/Part1.hs
  ghc-options:
    -main-is Day20.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day20p2
  main-is:
    app/Day20/Part2.hs
  ghc-options:
    -main-is Day20.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
    , Unique
  default-language:
    Haskell2010

executable eta-aoc-day21p1
  main-is:
    app/Day21/Part1.hs
  ghc-options:
    -main-is Day21.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day21p2
  main-is:
    app/Day21/Part2.hs
  ghc-options:
    -main-is Day21.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day22p1
  main-is:
    app/Day22/Part1.hs
  ghc-options:
    -main-is Day22.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day22p2
  main-is:
    app/Day22/Part2.hs
  ghc-options:
    -main-is Day22.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day23p1
  main-is:
    app/Day23/Part1.hs
  ghc-options:
    -main-is Day23.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day23p2
  main-is:
    app/Day23/Part2.hs
  ghc-options:
    -main-is Day23.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day24p1
  main-is:
    app/Day24/Part1.hs
  ghc-options:
    -main-is Day24.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day24p2
  main-is:
    app/Day24/Part2.hs
  ghc-options:
    -main-is Day24.Part2.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , timeit
  default-language:
    Haskell2010

executable eta-aoc-day25p1
  main-is:
    app/Day25/Part1.hs
  ghc-options:
    -main-is Day25.Part1.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , containers
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  other-modules:
    Day01Spec
    Day02Spec
    Day03Spec
    Day04Spec
    Day05Spec
    Day06Spec
    Day07Spec
    Day08Spec
    Day09Spec
    Day10Spec
    Day11Spec
    Day12Spec
    Day13Spec
    Day14Spec
    Day15Spec
    Day16Spec
    Day17Spec
    Day18Spec
    Day19Spec
    Day20Spec
    Day21Spec
    Day22Spec
    Day23Spec
    Day24Spec
    Day25Spec
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Spec.main
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
    , Unique
  default-language:
    Haskell2010

test-suite eta-aoc-test-day01
  type:
    exitcode-stdio-1.0
  main-is:
    Day01Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -main-is Day01Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
  default-language:
    Haskell2010

test-suite eta-aoc-test-day02
  type:
    exitcode-stdio-1.0
  main-is:
    Day02Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day02Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day03
  type:
    exitcode-stdio-1.0
  main-is:
    Day03Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day03Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day04
  type:
    exitcode-stdio-1.0
  main-is:
    Day04Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day04Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day05
  type:
    exitcode-stdio-1.0
  main-is:
    Day05Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day05Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day06
  type:
    exitcode-stdio-1.0
  main-is:
    Day06Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day06Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day07
  type:
    exitcode-stdio-1.0
  main-is:
    Day07Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day07Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day08
  type:
    exitcode-stdio-1.0
  main-is:
    Day08Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day08Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day09
  type:
    exitcode-stdio-1.0
  main-is:
    Day09Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day09Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day10
  type:
    exitcode-stdio-1.0
  main-is:
    Day10Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day10Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day11
  type:
    exitcode-stdio-1.0
  main-is:
    Day11Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day11Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day12
  type:
    exitcode-stdio-1.0
  main-is:
    Day12Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day12Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day13
  type:
    exitcode-stdio-1.0
  main-is:
    Day13Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day13Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day14
  type:
    exitcode-stdio-1.0
  main-is:
    Day14Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day14Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day15
  type:
    exitcode-stdio-1.0
  main-is:
    Day15Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day15Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day16
  type:
    exitcode-stdio-1.0
  main-is:
    Day16Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day16Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day17
  type:
    exitcode-stdio-1.0
  main-is:
    Day17Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day17Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day18
  type:
    exitcode-stdio-1.0
  main-is:
    Day18Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day18Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day19
  type:
    exitcode-stdio-1.0
  main-is:
    Day19Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day19Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day20
  type:
    exitcode-stdio-1.0
  main-is:
    Day20Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day20Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , Unique
  default-language:
    Haskell2010

test-suite eta-aoc-test-day21
  type:
    exitcode-stdio-1.0
  main-is:
    Day21Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day21Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day22
  type:
    exitcode-stdio-1.0
  main-is:
    Day22Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day22Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day23
  type:
    exitcode-stdio-1.0
  main-is:
    Day23Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day23Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
  default-language:
    Haskell2010

test-suite eta-aoc-test-day24
  type:
    exitcode-stdio-1.0
  main-is:
    Day24Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day24Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010

test-suite eta-aoc-test-day25
  type:
    exitcode-stdio-1.0
  main-is:
    Day25Spec.hs
  hs-source-dirs:
    test
    app
  ghc-options:
    -main-is Day25Spec.run
  build-depends:
    base >=4.8 && <4.12
    , eta-aoc
    , hspec
    , timeit
    , containers
  default-language:
    Haskell2010
